# WikidataEurLexScraper

./: README.md  find_no_longer_in_force.py  main.py  pyproject.toml  sample_config.py  scrape_names.py
diagrams/: workflow.puml
models/: law_item.py  title.py
tests/: test_law_item.py  test_title.py
