[tool.poetry]
name = "wikidataeurlexscraper"
version = "0.1.0"
description = ""
authors = ["Dennis Priskorn <egils@riseup.net>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.5.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
# This fixes https://github.com/dpriskorn/WikidataEurLexScraper/issues/2
wikibaseintegrator = { git = "https://github.com/LeMyst/WikibaseIntegrator.git", branch = "merge-ref-or-append"}
#wikibaseintegrator = "^0.12.4"
fasttext-langdetect = { git = "https://github.com/dpriskorn/fasttext-langdetect.git", branch = "main"}

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
