[tool.poetry]
name = "wikidataeurlexscraper"
version = "0.1.0"
description = ""
authors = ["Nizo Priskorn <nizo.priskorn@gmail.com>"]
license = "GPLv3+"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = "^2.5.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
wikibaseintegrator = "^0.12.8"
fasttext-langdetect = { git = "https://github.com/dpriskorn/fasttext-langdetect.git", branch = "main"}
# pyeurlex = "^0.2.9"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
